--- a/4. MoreExpress/1. IntroToEJS/views/love.ejs
+++ b/4. MoreExpress/1. IntroToEJS/views/love.ejs
@@ -1,6 +1,10 @@
+<%- include ("partials/header") %>
+
 <h1>You fell in love with: <%= whatPassedIn %></h1>
 <% if(whatPassedIn.toLowerCase() === "puppy"){ %>
 <p>puppy is cute</p>
 <% } %>
 
 <!-- note: to have <% %> in every line -->
+
+<%- include ("partials/footer") %>
