--- a/4. MoreExpress/1. IntroToEJS/views/posts.ejs
+++ b/4. MoreExpress/1. IntroToEJS/views/posts.ejs
@@ -1,3 +1,5 @@
+<%- include ("partials/header") %>
+
 <h1>The Posts Page</h1>
 
 <% for(let i = 0; i < postsAppear.length; i++){ %>
@@ -13,3 +15,4 @@
     <%= post.title %> - <strong><%= post.author %></strong>
 </li>
 <% }) %>
+<%- include ("partials/footer") %>
