--- a/YelpCamp/v1/views/campgrounds.ejs
+++ b/YelpCamp/v1/views/campgrounds.ejs
@@ -1,9 +1,15 @@
+<%- include("partials/header") %>
+
 <h1>This is the campground page</h1>
 
+<a href="/campgrounds/new">Add New Campground</a>
 <% campgrounds.forEach(function(campground){ %>
 <div>
     <h4><%= campground.name %></h4>
     <img src="<%= campground.image %>">
 </div>
 
+
 <% }) %>
+
+<%- include("partials/footer") %>
