adding create and show routings and views

--- a/7. RESTful_Routing/views/index.ejs
+++ b/7. RESTful_Routing/views/index.ejs
@@ -1,13 +1,13 @@
 <%- include("partials/header") %>
-
-<h1>index page</h1>
+<h1>Index Page</h1>
 
 <% blogs.forEach(function(blog){ %>
 <div>
     <h2><%= blog.title %></h2>
     <img src="<%= blog.image %>">
     <span><%= blog.created%></span>
-    <h2><%= blog.body %></h2>
+    <p><%= blog.body.substring(0, 100) %>...</p>
+    <a href="/blogs/<%= blog._id %>">Read More</a>
 </div>
 <% })%>
 
